--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 
-.body-initial {background-image: url('../assets/IMAG1840.jpg');}.silex-id-1540377257999-5 {width: 433px; min-height: 99px; top: 24px; left: 30px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.silex-id-1540377257999-5 {left: 12px; top: 60px; width: 455px; min-height: 100px;}}
+.body-initial {}.silex-id-1540377257999-5 {width: 433px; min-height: 99px; top: 61px; left: 80px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.silex-id-1540377257999-5 {left: 12px; top: 60px; width: 455px; min-height: 100px;}}
 
 .text-style-1 p {font-family: Arial, sans-serif; font-weight: bold;}
 .text-style-2 p {font-family: Georgia, serif; font-weight: bolder; text-align: left; letter-spacing: 1px;}.text-style-2 b {letter-spacing: 9px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.text-style-2 p {font-size: 20px; letter-spacing: 1px;}}
