--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 
 
-.body-initial {}.silex-id-1542690714474-2 {width: 664px; min-height: 338px; top: 0px; left: -7px;}.silex-id-1540377257999-5 {width: 455px; min-height: 109px; top: 249px; left: 74px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.silex-id-1540377257999-5 {left: 12px; top: 60px; width: 455px; min-height: 100px;}}
+.body-initial {background-image: url('../assets/beer2.jpg');}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.body-initial {background-image: url('/ce/github/get/Pictures/master/beer2.jpg'); background-position: top center; background-attachment: scroll;}}.silex-id-1540377257999-5 {width: 455px; min-height: 109px; top: 823px; left: 265px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.silex-id-1540377257999-5 {left: 48px; top: 20px; width: 455px; min-height: 100px;}}
 
 .text-style-1 p {font-family: Arial, sans-serif; font-weight: bold;}
 .text-style-2 p {font-family: Georgia, serif; font-weight: bolder; text-align: left; letter-spacing: 1px;}.text-style-2 b {letter-spacing: 9px;}@media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {.text-style-2 p {font-size: 20px; letter-spacing: 1px;}}
